--- a/src/styles.css
+++ b/src/styles.css
@@ -101,30 +101,23 @@ a:hover {
   font-size: 90px;
   font-family: "Cabin", sans-serif;
   font-weight: 600;
-  padding-right: 45px;
+  padding-right: 30px;
   padding-bottom: 5px;
-}
-.c-f {
-  font-family: "Cabin", sans-serif;
-  font-weight: 200;
-  font-size: 22px;
-  padding-top: 75px;
-  padding-right: 40px;
-  cursor: default;
-  color: rgb(0, 0, 0);
+  position: relative;
+  left: -10px;
 }
 
 #celsius-link {
-  cursor: default;
-}
-
-#fahrenheit-link {
-  cursor: default;
-}
-
-.c-f .active {
-  cursor: default;
-  color: rgb(69, 15, 218);
+  font-family: "Cabin", sans-serif;
+  font-weight: 600;
+  font-size: 30px;
+  padding-top: 70px;
+  padding-bottom: 20px;
+  padding-right: 30px;
+  position: relative;
+  right: 145px;
+  bottom: 10px;
+  color: rgb(0, 0, 0);
 }
 
 .line-1 {
